styles.css
#issue-image-container {
  /* Need ID and !important to override GitHub styling */
  padding-left: 50px !important;
  padding-bottom: 0 !important;
  position: relative;
}

.issue-images {
  top: -40px;
  left: -40px;
  margin-bottom: -30px;
  position: relative;
}

.issue-images--open {
  margin-bottom: auto;
}

.issue-images__toggle {
  margin: 5px 0;
  height: 30px;
  width: 30px;
  background-size: 60%;
  background-position: 70% 72%;
  background-repeat: no-repeat;
  position: relative;
  border: none;
  border-radius: 4px;
  filter: invert(1);
  opacity: 0.5;
}

.issue-images__toggle:hover {
  opacity: 1;
}

.issue-images__toggle::after {
  position: absolute;
  font-size: 16px;
  font-weight: 600;
  top: -4px;
  left: 2px;
  content: '+';
}

.issue-images--open .issue-images__toggle::after {
  content: '-';
}

.issue-images__gallery {
  display: none;
}

.issue-images--open .issue-images__gallery {
  display: inline-block;
  position: relative;
  top: 20px;
}

.gallery__nav {
  display: inline-block;
}

.gallery__nav__element {
  display: inline-block;
}

.gallery__nav__element--link:hover {
  text-decoration: underline;
  cursor: default;
}

.gallery__current-image {
  width: 100%;
  border: 1px solid lightgrey;
  margin: 15px 0;
}

